--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "laravel/framework": "^5.0",
-    "laravel/dusk": "^4.0"
+    "laravel/framework": "^5 || ^6 || ^7 || ^8",
+    "laravel/dusk": "^4 || ^5 || ^6"
   },
   "autoload": {
     "psr-4": {
